[package]
name = "hyperloglog"
version = "0.1.0"
edition = "2018"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "(simplified) Hyperloglog implementation in Rust"
license = "ISC"
repository = "https://github.com/finnbear/hyperloglog"
publish = false

[dependencies]
bytecount = "0.6"
bytemuck = "1.19.0"
rand = "0.8.0"
serde = { version = "1.0", optional = true }
siphasher = "1"

[dev-dependencies]
bincode = "1.3"

[features]
with_serde = ["serde", "siphasher/serde_std"]
default = []
