[package]
name = "hyperloglog"
version = "0.1.0"
edition = "2021"
description = "(simplified) Hyperloglog implementation in Rust"
license = "ISC"
repository = "https://github.com/finnbear/hyperloglog"
publish = false

[dependencies]
arcode = "0.2.4"
bytecount = "0.6"
bytemuck = { version = "1.19.0", features = ["must_cast"] }
siphasher = "1"

[dev-dependencies]
rand = "0.8"

[features]
default = []
