[package]
name = "hyperloglog"
version = "0.1.0"
edition = "2021"
description = "(simplified) Hyperloglog implementation in Rust"
license = "ISC"
repository = "https://github.com/finnbear/hyperloglog"
publish = false

[dependencies]
arcode = { version = "0.2.4", optional = true }
base64 = { version = "0.22.1", optional = true }
bytecount = "0.6"
bytemuck = { version = "1.19.0", features = ["must_cast"] }
serde = { version = "1.0", optional = true }
siphasher = "1"

[dev-dependencies]

bincode = "1.3.3"
rand = "0.8"
serde_json = "1.0"

[features]
default = []
serde = ["arcode", "dep:serde", "dep:base64"]